<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/nav_header_height"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ScrollViewMain"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:id="@+id/HTMLLnkMain"
                android:layout_marginTop="10dp"
                android:background="#009900"
                android:src="@drawable/button_html"
                android:scaleType="centerCrop"
                android:contentDescription="@string/htmldescription" />

            <ImageButton
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:id="@+id/CSSLnkMain"
                android:layout_marginTop="30dp"
                android:background="#0000FF"
                android:src="@drawable/button_css"
                android:scaleType="centerCrop"
                android:contentDescription="@string/cssdescription" />

            <ImageButton
                android:layout_width="320dp"
                android:layout_height="90dp"
                android:id="@+id/JsLnkMain"
                android:layout_marginTop="30dp"
                android:background="#FF0000"
                android:src="@drawable/button_jscript"
                android:scaleType="centerCrop"
                android:contentDescription="@string/javascriptdescription" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>